--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>Select doors!</title>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"> -->
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
@@ -113,6 +113,63 @@
       <div class="door">
         <div class="image"></div>
       </div>
+
+      <!-- 18개 추가 -->
+      
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
+      <div class="door2">
+        <div class="image"></div>
+      </div>
     </div>
 
     <!--Title-->
@@ -121,6 +178,9 @@
     </div>
 
   </div>
+
+ 
+  
 
 </body>
 </html>
